--- a/aimless-debug/src/main/resources/plugin.yml
+++ b/aimless-debug/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ version: 1.0
 api-version: '1.17'
 commands:
   aimless:
+libraries:
+  - org.jetbrains.kotlin:kotlin-stdlib:1.5.20
+  - org.jetbrains.kotlin:kotlin-reflect:1.5.20
+  - org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0
+  - org.mariuszgromada.math:MathParser.org-mXparser:4.4.2
